--- a/app/public/style.css
+++ b/app/public/style.css
@@ -3,6 +3,10 @@ h1 {
     color: teal;
 }
 
+h2 {
+    font-weight: strong;
+}
+
 h3 {
     color: teal;
 }
@@ -11,4 +15,17 @@ h3 {
     margin-bottom: 15px;
     border-radius: 5px;
     padding: 3px;
+}
+
+#matchPhoto{
+    width: 200px;
+    height: auto;
+}
+
+.jumbotron {
+    background-color: rgb(29, 204, 204);
+}
+
+a {
+    color: teal;
 }
